Исправление критический ошибок

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Сложно сосредоточиться</title>
         <meta name="color-scheme" content="dark light">
-        <link rel="stylesheet" href="./styles/globals.css">
         <link rel="stylesheet" href="./fonts/fonts.css">
         <link rel="stylesheet" href="./styles/style.css">
-        <link rel="stylesheet" href="./styles/dark.css">
+        <link rel="stylesheet" href="./styles/globals.css">
         <link rel="stylesheet" href="./styles/variables.css">
+        <link rel="stylesheet" href="./styles/dark.css">
         <link rel="stylesheet" href="./styles/light.css">
         <link rel="icon" href="./images/favicon.ico" sizes="any">
         <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
@@ -18,14 +18,14 @@
     </head>
     <body class="page">
         <header class="header decorated-zone">
-            <nav class="header__theme-menu">
+            <nav class="header__theme-menu ">
                 <ul class="header__theme-menu-list">
                     <li class="header__theme-menu-item">
                         <button class="header__theme-menu-button header__theme-menu-button_type_light">
                             День
                         </button>
                     </li>
-                    <li class="header__theme-menu-item">
+                    <li class="header__theme-menu-item">    
                         <button class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto" disabled>
                             Авто
                         </button>
@@ -42,7 +42,8 @@
             <div class="header__title">
                 <p class="header__title-text">
                     Что делать, когда не можешь делать ничего
-                    <br>
+                </p>
+                <p class="header__title-text">
                     Или почему нам так сложно сконцентрироваться, особенно когда очень надо
                 </p>
             </div>
@@ -78,7 +79,7 @@
             </section>
             <section class="section__main-column">
                 <h2 class="section__main_title">Что снижает концентрацию внимания?</h2>
-                <div class="section__main_articles">
+                <div class="section__main_articles-column">
                     <article class="section__main_subtitle">
                         <h3 class="section__main_subtitle-text">Многозадачность</h3>
                         <p class="section__main_subtitle-description">
@@ -112,9 +113,9 @@
             <section class="section__main">
                 <h2 class="section__main_title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
                 <div class="section__main_articles">
-                    <h2 class="section__main_articles-text">5 простых (на самом деле не очень) советов</h2>
+                    <h3 class="section__main_articles-text">5 простых (на самом деле не очень) советов</h3>
                     <article class="section__main_subtitle">
-                        <h3 class="section__main_subtitle-text">Представьте небо и облака</h3>
+                        <h4 class="section__main_subtitle-text little">Представьте небо и облака</h4>
                         <p class="section__main_subtitle-description">
                             Или листья в ручье. Тут дело в лёгкой медитации, которая
             помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные
@@ -125,7 +126,7 @@
                         </p>
                     </article>
                     <article class="section__main_subtitle">
-                        <h3 class="section__main_subtitle-text">Включите музыку</h3>
+                        <h4 class="section__main_subtitle-text little">Включите музыку</h4>
                         <p class="section__main_subtitle-description">
                             Но не любую, и не любимую. Любимая может быть связана с сильными
             положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная.
@@ -133,7 +134,7 @@
                         </p>
                     </article>
                     <article class="section__main_subtitle">
-                        <h3 class="section__main_subtitle-text">Прогуляйтесь</h3>
+                        <h4 class="section__main_subtitle-text little">Прогуляйтесь</h4>
                         <p class="section__main_subtitle-description">
                             Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
                             <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" class="section__main_subtitle-link">показал</a>
@@ -144,7 +145,7 @@
                         </p>
                     </article>
                     <article class="section__main_subtitle">
-                        <h3 class="section__main_subtitle-text">Хорошо ешьте</h3>
+                        <h4 class="section__main_subtitle-text little">Хорошо ешьте</h4>
                         <p class="section__main_subtitle-description">
                             Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
             которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды,
@@ -152,7 +153,7 @@
                         </p>
                     </article>
                     <article class="section__main_subtitle">
-                        <h3 class="section__main_subtitle-text">Читайте</h3>
+                        <h4 class="section__main_subtitle-text little">Читайте</h4>
                         <p class="section__main_subtitle-description">
                             Настоящие бумажные книги. Это правда помогает с концентрацией:
             чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна
